[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Diamond.gd" type="Script" id=1]
[ext_resource path="res://Assets/Pickup Items/Diamond.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Effectors/Pickup.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Audio/Reward.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.63036, 2.55911 )

[node name="Diamond" type="Node2D"]
scale = Vector2( 8.40137, 8.40137 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -9.53674e-07, -9.53674e-07 )
scale = Vector2( 0.32501, 0.32501 )
texture = ExtResource( 2 )

[node name="Pickup" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickup"]
position = Vector2( 0.178542, -0.0595142 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="Pickup" to="." method="_on_Pickup_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
